# YASO

./: .gitattributes  Dockerfile  README.md
.github/workflows/: deploy.yml
impred/: README.md  db.sqlite3  pyproject.toml  requirements.txt  server.py
impred/.github/workflows/: deploy.yml
impred/data/: model-cifar10.h5
impred/ds_project/: settings.py  urls.py
impred/impred/: admin.py  apps.py  forms.py  model_cifar10.py  models.py  urls.py  utils.py  views.py
impred/impred/migrations/: 0001_initial.py  0002_netmodels_version.py  0002_remove_images_predictname_images_netmodel_and_more.py  0003_alter_images_imagepath_alter_netmodels_modelpath.py  0004_remove_images_user.py  0005_alter_labels_unique_together.py  0005_alter_netmodels_modelpath.py  0006_alter_images_netmodel.py  0006_netmodels_accuracy.py  0007_netmodels_categories.py  0008_alter_netmodels_accuracy_alter_netmodels_categories.py  0009_merge_20240220_0656.py  0009_netmodels_version.py  0010_images_real_alter_images_predict.py
impred/impred/static/impred/: error.css  index.css  index2.css  lab.css  lab2.css  login.css  login2.css  style.css
impred/impred/templates/impred/: base.html  index.html  loadimage (1).html  loadimage.html  netmodel.html  netmodels.html  predictimage.html  predictimages.html
impred/media/models/: model-cifar10.h5  model-cifar10m.h5
impred/user/: forms.py  models.py  urls.py  views.py
impred/user/templates/user/: login.html  signup.html
impred/utils/: migration.py
impred/utils/data/: labels.json  netmodels.json
